@@ -1,40 +1,57 @@
 package b.nana.technology.gingester.transformers.base.transformers.path;
 
-import b.nana.technology.gingester.core.Context;
-import b.nana.technology.gingester.core.Transformer;
+import b.nana.technology.gingester.core.controller.Context;
+import b.nana.technology.gingester.core.receiver.Receiver;
+import b.nana.technology.gingester.core.transformer.Transformer;
 import com.fasterxml.jackson.annotation.JsonCreator;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.Map;
 
-public class Move extends Transformer<Path, Path> {
+public final class Move implements Transformer<Path, Path> {
 
-    private final Context.StringFormat destinationFormat;
+    private final Context.Template pathTemplate;
+    private final boolean mkdirs;
 
     public Move(Parameters parameters) {
-        super(parameters);
-        destinationFormat = new Context.StringFormat(parameters.destination);
+        pathTemplate = Context.newTemplate(parameters.path);
+        mkdirs = parameters.mkdirs;
     }
 
     @Override
-    protected void transform(Context context, Path input) throws Exception {
-        String destinationString = destinationFormat.format(context);
-        Path destination = Paths.get(destinationString);
-        Files.move(input, destination);
-        emit(context.extend(this).description(destinationString), destination);
+    public void transform(Context context, Path in, Receiver<Path> out) throws Exception {
+        
+        Path target = Path.of(pathTemplate.render(context));
+
+        Path parent = target.getParent();
+        if (mkdirs && parent != null && !Files.exists(parent)) {
+            Files.createDirectories(parent);
+        }
+        
+        Files.move(in, target);
+        out.accept(
+                context.stash(Map.of(
+                        "description", target.toString(),
+                        "path", Map.of(
+                                "full", target.toAbsolutePath()
+                        )
+                )),
+                target
+        );
     }
 
     public static class Parameters {
 
-        public String destination;
+        public String path;
+        public boolean mkdirs = true;
 
         @JsonCreator
         public Parameters() {}
 
         @JsonCreator
-        public Parameters(String destination) {
-            this.destination = destination;
+        public Parameters(String path) {
+            this.path = path;
         }
     }
 }
